Fix misaligned tags

--- a/source/themes/quis/css/screen.scss
+++ b/source/themes/quis/css/screen.scss
@@ -728,6 +728,11 @@ footer {
         display: inline-block;
         white-space: nowrap;
         margin: 0 $font-size / 2 0 0;
+
+        &:last-child {
+          margin-right: 0;
+        }
+
       }
 
     }
